# iOverlay

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  readme  tests_boolean.json  tests_convert_boolean.py  tests_convert_outline.py  tests_convert_strigs.py  tests_convert_string.py  tests_convert_stroke.py  tests_outline.json  tests_string.json  tests_stroke.json
.github/: pull_request_template.md
examples/overlay_editor/: Cargo.toml  run_build-wasm.sh
examples/overlay_editor/src/: lib.rs  main.rs  web.rs
examples/overlay_editor/src/app/: design.rs  fill_option.rs  main.rs  mod.rs
examples/overlay_editor/src/app/boolean/: content.rs  control.rs  workspace.rs
examples/overlay_editor/src/app/outline/: content.rs  control.rs  workspace.rs
examples/overlay_editor/src/app/string/: content.rs  control.rs  workspace.rs
examples/overlay_editor/src/app/stroke/: content.rs  control.rs  workspace.rs
examples/overlay_editor/src/data/: boolean.rs  mod.rs  outline.rs  resource.rs  string.rs  stroke.rs
examples/overlay_editor/src/draw/: mod.rs  path.rs  shape.rs  varicolored.rs  vectors.rs
examples/overlay_editor/src/geom/: mod.rs  vector.rs
examples/overlay_editor/src/point_editor/: point.rs  state.rs  widget.rs
examples/overlay_editor/src/sheet/: state.rs  widget.rs
examples/overlay_editor/web/: index.html
examples/performance/: Cargo.toml
examples/performance/src/: main.rs
examples/performance/src/task/: long_rects_test.rs  many_squares_test.rs  mod.rs
examples/shape_editor/: Cargo.toml
examples/shape_editor/src/: fill_view.rs  main.rs  square.rs
examples/shape_editor/src/app/: design.rs  fill_option.rs  main.rs  mod.rs  polygon.rs  polygon_editor.rs  solver_option.rs
examples/shape_editor/src/app/boolean/: content.rs  control.rs  mod.rs  workspace.rs
examples/shape_editor/src/app/boolean/editor/: data.rs  mod.rs  state.rs  widget.rs
examples/shape_editor/src/app/string/: content.rs  control.rs  mod.rs  workspace.rs
examples/shape_editor/src/data/: boolean.rs  mod.rs  polygon.rs  resource.rs  string.rs
examples/shape_editor/src/draw/: mod.rs  path.rs  shape.rs  varicolored.rs  vectors.rs
examples/shape_editor/src/geom/: camera.rs  mod.rs  viewport.rs
examples/shape_editor/src/point_editor/: mod.rs  point.rs  state.rs  widget.rs
examples/shape_editor/src/shape/: mod.rs  widget.rs
examples/shape_editor/src/sheet/: mod.rs  state.rs  widget.rs
examples/shape_editor/src/util/: mod.rs  point.rs
iOverlay/: Cargo.toml  README.md  rustfmt.toml
iOverlay/src/: lib.rs
iOverlay/src/bind/: mod.rs  segment.rs  solver.rs
iOverlay/src/core/: divide.rs  exract_ocg.rs  extract.rs  extract_ocg.rs  extract_ogc.rs  fill_rule.rs  filter.rs  graph.rs  link.rs  mod.rs  nearest_vector.rs  overlay.rs  overlay_rule.rs  predicate.rs  relate.rs  simplify.rs  solver.rs
iOverlay/src/fill/: mod.rs  solver.rs
iOverlay/src/float/: clip.rs  filter.rs  graph.rs  mod.rs  overlay.rs  relate.rs  scale.rs  simplify.rs  single.rs  slice.rs  string_graph.rs  string_overlay.rs
iOverlay/src/float/source/: double.rs  mod.rs  resource.rs  single.rs  triple.rs
iOverlay/src/geom/: end.rs  id_point.rs  line_range.rs  mod.rs  v_segment.rs  x_segment.rs
iOverlay/src/mesh/: boolean.rs  extract.rs  graph.rs  math.rs  miter.rs  mod.rs  overlay.rs  rotator.rs  style.rs  subject.rs
iOverlay/src/mesh/outline/: builder.rs  builder_join.rs  builder_join_expand.rs  builder_join_shrink.rs  mod.rs  offset.rs  section.rs  uniq_iter.rs
iOverlay/src/mesh/stroke/: builder.rs  builder_cap.rs  builder_join.rs  mod.rs  offset.rs  section.rs
iOverlay/src/segm/: boolean.rs  build.rs  merge.rs  mod.rs  offset.rs  segment.rs  sort.rs  string.rs  winding.rs
iOverlay/src/split/: cross_solver.rs  fragment.rs  grid_layout.rs  line_mark.rs  mod.rs  snap_radius.rs  solver.rs  solver_fragment.rs  solver_list.rs  solver_tree.rs
iOverlay/src/string/: clip.rs  extract.rs  filter.rs  graph.rs  line.rs  mod.rs  overlay.rs  rule.rs  slice.rs  split.rs
iOverlay/src/util/: log.rs  mod.rs  sort.rs
iOverlay/src/vector/: edge.rs  extract.rs  extract_vectors.rs  mod.rs  simplify.rs
iOverlay/tests/: board_tests.rs  data.rs  direction_tests.rs  doc_tests.rs  dynamic_tests.rs  empty_tests.rs  fill_rule_tests.rs  float_overlay_tests.rs  float_point_adapter.rs  fragment_tests.rs  ocg_tests.rs  overlay_tests.rs  shared_point_tests.rs  simplify_tests.rs  slice_tests.rs  string_tests.rs  util.rs  vector_tests.rs
iOverlay/tests/boolean/: test_10.json  test_102.json  test_103.json  test_109.json  test_116.json  test_118.json  test_119.json  test_123.json  test_124.json  test_129.json  test_132.json  test_133.json  test_134.json  test_136.json  test_139.json  test_14.json  test_141.json  test_142.json  test_143.json  test_144.json  test_149.json  test_150.json  test_151.json  test_153.json  test_154.json  test_158.json  test_160.json  test_18.json  test_28.json  test_29.json  test_30.json  test_31.json  test_4.json  test_40.json  test_49.json  test_50.json  test_56.json  test_6.json  test_61.json  test_62.json  (+6 more)
iOverlay/tests/outline/: test_1.json  test_10.json  test_2.json  test_3.json  test_4.json  test_5.json  test_7.json  test_8.json  test_9.json
iOverlay/tests/string/: test_0.json  test_1.json  test_10.json  test_11.json  test_2.json  test_3.json  test_4.json  test_5.json  test_6.json  test_8.json  test_9.json
iOverlay/tests/stroke/: test_0.json  test_1.json  test_4.json
performance/rust_app/: Cargo.toml  run.sh
performance/rust_app/src/: main.rs
performance/rust_app/src/test/: mod.rs  test_0_checkerboard.rs  test_1_not_overlap.rs  test_2_lines_net.rs  test_3_spiral.rs  test_4_windows.rs  test_5_nested_squares.rs  test_6_corrosion.rs  test_7_concentric.rs  test_8_wind_mill.rs  util.rs
readme/: overlay_rules.md
shape_editor/: Cargo.toml
shape_editor/src/: main.rs  square.rs
shape_editor/src/app/: design.rs  main.rs  mod.rs  polygon.rs  polygon_editor.rs
shape_editor/src/data/: mod.rs  polygon.rs  resource.rs
(+535 files in other folders)
