[package]
name = "i_overlay"
version = "3.1.1"
authors = ["Nail Sharipov <nailxsharipov@gmail.com>"]
edition = "2024"
description = "Boolean Operations for 2D Polygons: Supports intersection, union, difference, xor, and self-intersections for all polygon varieties."
license = "MIT"
repository = "https://github.com/iShape-Rust/iOverlay"
readme = "README.md"

[dependencies]
i_float = { version = "~1.9.0" }
i_shape = { version = "~1.11.0" }
i_tree = { version = "~0.14.0" }
i_key_sort = { version = "~0.4.0" }

#i_float = { path = "../iFloat" }
#i_shape = { path = "../../iShape" }
#i_tree = { path = "../../iTree" }
#i_key_sort = { path = "../iKeySort" }


[dependencies.rayon]
version = "^1.10"
optional = true

[features]
default = ["allow_multithreading"]
allow_multithreading = ["rayon"]
glam = ["i_float/glam"]

[dev-dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
rand = { version = "^0.8.5", features = [] }
