[package]
name = "i_overlay"
version = "4.0.7"
authors = ["Nail Sharipov <nailxsharipov@gmail.com>"]
edition = "2024"
description = "Boolean Operations for 2D Polygons: Supports intersection, union, difference, xor, and self-intersections for all polygon varieties."
license = "MIT"
repository = "https://github.com/iShape-Rust/iOverlay"
readme = "README.md"

categories = ["algorithms", "graphics", "science::geo", "mathematics", "no-std"]

[dependencies]
i_float = { version = "~1.15.0" }
i_shape = { version = "~1.14.0" }
i_tree = { version = "~0.16.0" }
i_key_sort = { version = "~0.6.0" }

#i_float = { path = "../../iFloat"}
#i_shape = { path = "../../iShape"}
#i_tree = { path = "../../iTree" }
#i_key_sort = { path = "../../iKeySort" }

rayon = { optional = true, version = "^1.10" }


[features]
default = []

glam = ["i_float/glam"]
serde = ["i_float/serde", "i_shape/serde"]
allow_multithreading = ["dep:rayon"]

[dev-dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
rand = { version = "~0.9", features = ["alloc"] }
#i_float = { path = "../../iFloat", features = ["serde"] }
#i_shape = { path = "../../iShape", features = ["serde"] }
i_float = { version = "~1.15.0", features = ["serde"] }
i_shape = { version = "~1.14.0", features = ["serde"] }