[package]
name = "shape_editor"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "^0.13.1", features = ["wgpu", "advanced"] }
rand = { version = "^0.8.5", features = [] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"

i_overlay = { path = "../../iOverlay" }