[package]
name = "overlay_editor"
version = "0.1.0"
edition = "2021"
publish = false

[profile.release]
opt-level = 3
lto = false
codegen-units = 1

[lib]
crate-type = ["cdylib"]

[dependencies]

iced = {  path = "../../../../iced", features = ["wgpu", "advanced"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"

wasm-bindgen = "~0.2.95"

log = "0.4.22"
console_log = "^1.0.0"
console_error_panic_hook = "^0"

#i_triangle = "^0.28.0"

i_triangle = { path = "../../../../iShape/iTriangle/iTriangle" }
i_mesh = { path = "../../../../iShape/iMesh/iMesh" }