[package]
name = "performance"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
i_overlay = { path = "../../../iOverlay" }
i_shape = { version = "^0.3.0" }
i_float = { version = "^0.2.0" }
chrono = "^0.4"

[profile.release]
debug = true