[package]
name = "shape_editor"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]

iced = { version = "^0.13.1", features = ["wgpu", "advanced"] }
rand = { version = "^0.8.5", features = [] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"

i_triangle = "^0.27.0"
#i_triangle = { path = "../../../../iShape/iTriangle" }