[package]
name = "rust_app"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = false
codegen-units = 1

[dependencies]

#i_overlay = { path = "../../iOverlay", default-features = true }
i_overlay = { path = "../../iOverlay", features = ["allow_multithreading"] }
#i_overlay = "~3.4.0"